fixing #content to wrap around correctly on grid layout.

--- a/src/interlegis/portalmodelo/theme/themes/Clean/css/style.css
+++ b/src/interlegis/portalmodelo/theme/themes/Clean/css/style.css
@@ -166,6 +166,10 @@ h1 {
 h2 {
   color: #1a3a64;
 }
+#content {
+  display: table;
+  margin: 0;
+}
 #content .documentDescription,
 #content #description {
   color: #4d4d4d;
