--- a/src/interlegis/portalmodelo/theme/themes/Moderno/css/style.css
+++ b/src/interlegis/portalmodelo/theme/themes/Moderno/css/style.css
@@ -172,6 +172,10 @@ h1 {
 h2 {
   color: #283e93;
 }
+#content {
+  display: table;
+  margin: 0;
+}
 #content .documentDescription,
 #content #description {
   color: #4d4d4d;
