--- a/src/interlegis/portalmodelo/theme/themes/Vermelho/css/style.css
+++ b/src/interlegis/portalmodelo/theme/themes/Vermelho/css/style.css
@@ -168,6 +168,10 @@ h1 {
 h2 {
   color: #853d2d;
 }
+#content {
+  display: table;
+  margin: 0;
+}
 #content .documentDescription,
 #content #description {
   color: #4d4d4d;
